--- a/TracNghiemTinHoc_Web2/src/main/resources/application.properties
+++ b/TracNghiemTinHoc_Web2/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=TracNghiemTinHoc_Web2
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/tracnghiemtinhoc?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/tracnghiemtinhoc?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
-
+## password de trong, neu pass la null
+## ==============JPA / HIBERNATE=================
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
