--- a/WebBlogCaNhan_Web2/src/main/resources/application.properties
+++ b/WebBlogCaNhan_Web2/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=TracNghiemTinHoc_Web2
+spring.application.name=WebBlogCaNhan_Web2
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/tracnghiemtinhoc?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/blogcanhan?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 ## password de trong, neu pass la null
